user-service/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-driven-ui
spec:
  selector:
    app: event-driven-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
