user-service/k8s/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress

spec:
  ingressClassName: traefik
  rules:
    - host: event-driven-ui.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: event-driven-ui
                port:
                  number: 80
